testdata/baselines/reference/submodule/conformance/privateNamesUnique-1.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'CallableFunction'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'NewableFunction'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
privateNamesUnique-1.ts(9,7): error TS2322: Type 'B' is not assignable to type 'A'.
  Property '#foo' in type 'B' refers to a different member that cannot be accessed from within type 'A'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'CallableFunction'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'NewableFunction'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== privateNamesUnique-1.ts (1 errors) ====
    class A {
        #foo: number;
    }
    
    class B {
        #foo: number;
    }
    
    const b: A = new B();     // Error: Property #foo is missing
          ~
!!! error TS2322: Type 'B' is not assignable to type 'A'.
!!! error TS2322:   Property '#foo' in type 'B' refers to a different member that cannot be accessed from within type 'A'.
    